--- a/packs/openstack/config.yaml
+++ b/packs/openstack/config.yaml
@@ -1,10 +1,10 @@
 ---
-username: "",
-password: "",
-tenant: "",
-auth_url: "",
+username: ""
+password: ""
+tenant: ""
+auth_url: ""
 endpoints:
-    keystone: "",
-    nova: "",
-    glance": "",
+    keystone: ""
+    nova: ""
+    glance": ""
     cinder": ""
