--- a/packs/newrelic/actions/get_alerts.yaml
+++ b/packs/newrelic/actions/get_alerts.yaml
@@ -3,7 +3,7 @@
   runner_type: "run-python"
   description: "Get alerts for app."
   enabled: true
-  entry_point: "get_metric_data.py"
+  entry_point: "get_alerts.py"
   parameters:
     app_name:
       type: "string"
