Use a more efficient search approach and only retrieve "count" latest tweet which match the criteria.

--- a/packs/twitter/config.yaml
+++ b/packs/twitter/config.yaml
@@ -5,5 +5,6 @@ consumer_secret:
 access_token:
 access_token_secret:
 
-query: "StackStorm OR Stack_Storm OR @StackStorm"
+query: "StackStorm OR @Stack_Storm"
+count: 30
 language: en
