--- a/packs/slack/config.yaml
+++ b/packs/slack/config.yaml
@@ -1,4 +1,8 @@
 ---
+# Used for slack action
 webhook_url: "https://hooks.slack.com/services/<replace me>"
 username: "my-bot"
 icon_emoji: ":panda_face:"
+
+# Used for Slack sensor
+token: ""
