Partition settings by action and sensor.

--- a/packs/slack/config.yaml
+++ b/packs/slack/config.yaml
@@ -1,8 +1,10 @@
 ---
-# Used for slack action
-webhook_url: "https://hooks.slack.com/services/<replace me>"
-username: "my-bot"
-icon_emoji: ":panda_face:"
+# Used for post message action
+post_message_action:
+  webhook_url: "https://hooks.slack.com/services/<replace me>"
+  username: "my-bot"
+  icon_emoji: ":panda_face:"
 
 # Used for Slack sensor
-token: ""
+sensor:
+  token: ""
