--- a/packs/aws/config.yaml
+++ b/packs/aws/config.yaml
@@ -4,4 +4,4 @@ setup:
   aws_access_key_id: ""
   aws_secret_access_key: ""
 interval: 20
-st2_user_data: ""
+st2_user_data: "/opt/stackstorm/packs/aws/actions/scripts/bootstrap_user.sh"
