--- a/packs/aws/actions/destroy_vm.meta.yaml
+++ b/packs/aws/actions/destroy_vm.meta.yaml
@@ -5,14 +5,10 @@
   enabled: true
   entry_point: "workflows/destroy_vm.yaml"
   parameters:
-    environment:
-      type: "string"
-      description: "Environment to deploy to"
-      default: "staging"
     dns_zone:
       type: "string"
       description: "Route53 DNS Zone to add host to"
-      default: ""
+      required: true
     hostname:
       type: "string"
       description: "Short hostname"
