Use a remote runner for traceroute action.

--- a/packs/linux/actions/traceroute.yaml
+++ b/packs/linux/actions/traceroute.yaml
@@ -1,5 +1,5 @@
 name: traceroute
-runner_type: run-local
+runner_type: run-remote
 description: "Traceroute a Host"
 enabled: true
 entry_point: 'traceroute.sh'
