--- a/packs/dripstat/pack.yaml
+++ b/packs/dripstat/pack.yaml
@@ -1,8 +1,11 @@
-### Place information about your pack version here.
 ---
 name: dripstat
 description: Integration with the Dripstat Application Performance Monitoring tool
+keywords:
+  - dripstat
+  - java
+  - monitoring
+  - performance monitoring
 version: 0.0.1
 author: James Fryman
 email: james@fryman.io
-
