--- a/packs/irc/pack.yaml
+++ b/packs/irc/pack.yaml
@@ -1,6 +1,9 @@
 ---
 name : irc
 description : st2 content pack containing irc integrations
+keywords:
+  - irc
+  - internet relay chat
 version : 0.1
 author : st2-dev
 email : info@stackstorm.com
