Allow user to pass region to rackspace.create_vm action.

--- a/packs/rackspace/actions/create_vm.yaml
+++ b/packs/rackspace/actions/create_vm.yaml
@@ -21,3 +21,7 @@ parameters:
     type: string
     description: Optional public SSH key material
     required: false
+  region:
+    type: string
+    description: Optional region name. Defaults to region specified in the config.
+    required: false
