--- a/packs/rackspace/actions/list_vms.yaml
+++ b/packs/rackspace/actions/list_vms.yaml
@@ -8,3 +8,4 @@ parameters:
   region:
     type: string
     description: Optional region name. Defaults to region specified in the config.
+    required: false
