--- a/packs/rackspace/pack.yaml
+++ b/packs/rackspace/pack.yaml
@@ -1,8 +1,6 @@
-### Place information about your pack version here.
 ---
 name: rackspace
-description: rackspace
-version: 0.0.1
+description: Packs which allows integration with Rackspace services such as servers, load balancers and DNS.
+version: 0.1.0
 author: jfryman
 email: jfryman@FryBook
-
