--- a/packs/st2/actions/kvstore.yaml
+++ b/packs/st2/actions/kvstore.yaml
@@ -13,7 +13,7 @@ parameters:
   action:
     required: true
     enum:
-      - 'create'
+      - 'set'
       - 'get'
       - 'delete'
       - 'update'
