Require user to pass "ip_address" parameter instead of "host" to the action. Passing a hostname doesn't work correctly.
Also remove redundant if.

--- a/packs/linux/actions/get_open_ports.yaml
+++ b/packs/linux/actions/get_open_ports.yaml
@@ -4,7 +4,7 @@ description: Retrieve open ports for a given host
 enabled: true
 entry_point: get_open_ports.py
 parameters:
-  host:
+  ip_address:
     type: string
-    description: "Host to query for open ports"
+    description: "IP address of a host to query open ports from"
     required: true
