--- a/packs/chef/pack.yaml
+++ b/packs/chef/pack.yaml
@@ -1,6 +1,10 @@
 ---
 name : chef
 description : st2 chef integration pack
+keywords:
+  - chef
+  - cfg management
+  - configuration management
 version : 0.1
 author : st2-dev
 email : info@stackstorm.com
