Move action chain workflow in a subdirectory to avoid errors during action loading.

--- a/packs/linux/actions/diag_loadavg.yaml
+++ b/packs/linux/actions/diag_loadavg.yaml
@@ -3,7 +3,7 @@
   description: "Diagnostic workflow for high load alert"
   runner_type: "action-chain"
   enabled: true
-  entry_point: "diag_loadavg.chain.yaml"
+  entry_point: "workflows/diag_loadavg.yaml"
   parameters: 
     hostname: 
       type: "string"
