--- a/packs/hue/pack.yaml
+++ b/packs/hue/pack.yaml
@@ -5,4 +5,8 @@ description: Philips Hue Pack
 version: 0.0.1
 author: James Fryman
 email: james@stackstorm.com
+keywords:
+  - hue
+  - philips
+  - iot
 
