--- a/packs/nest/pack.yaml
+++ b/packs/nest/pack.yaml
@@ -1,8 +1,8 @@
 ### Place information about your pack version here.
 ---
 name: nest
-description: nest
+description: StackStorm integration with Nest Thermostats
 version: 0.0.1
-author: jfryman
-email: jfryman@FryBook
+author: James Fryman
+email: james@stackstorm.com
 
