made modification for incidents to route to different groups

--- a/packs/victorops/actions/open_incident.yaml
+++ b/packs/victorops/actions/open_incident.yaml
@@ -16,3 +16,8 @@ parameters:
     type: string
     description: "Descriptive message about the event"
     required: false
+  notify_group:
+    type: string
+    description: "send notifications to this group"
+    required: false
+
