--- a/packs/st2/actions/kv_set_object.yaml
+++ b/packs/st2/actions/kv_set_object.yaml
@@ -11,3 +11,7 @@ parameters:
   value:
     required: True
     type: object
+  ttl:
+    type: integer
+    description: 'Optional TTL for the provided value'
+    required: False
