--- a/packs/nest/actions/set_away.yaml
+++ b/packs/nest/actions/set_away.yaml
@@ -1,11 +1,11 @@
 ---
-name: set_away
-runner_type: run-python
-description: Set nest to away mode
+name: "set_away"
+runner_type: "run-python"
+description: "Set nest to away mode"
 enabled: true
-entry_point: set_away.py
+entry_point: "set_away.py"
 parameters:
   structure:
-    type: integer
-    description: ID of Nest Home name
+    type: "integer"
+    description: "ID of Nest Home name"
     default: 0
