--- a/packs/nest/actions/mode.yaml
+++ b/packs/nest/actions/mode.yaml
@@ -1,25 +1,26 @@
 ---
-name: mode
-runner_type: run-python
-description: Manage nest modes
+name: "mode"
+runner_type: "run-python"
+description: "Manage nest modes"
 enabled: true
-entry_point: mode.py
+entry_point: "mode.py"
 parameters:
   mode:
-    type: string
-    description: Mode to change the thermostat to
+    type: "string"
+    description: "Mode to change the thermostat to"
     enum:
-      - heat
-      - cool
-      - range
-      - off
+      - "heat"
+      - "cool"
+      - "range"
+      - "off"
+    default: "cool"
     required: true
   structure:
-    type: integer
-    description: ID of Nest Home name
+    type: "integer"
+    description: "ID of Nest Home name"
     default: 0
   device:
-    type: integer
-    description: ID of specific Nest device in a structure
+    type: "integer"
+    description: "ID of specific Nest device in a structure"
     default: 0
 
