--- a/packs/nest/actions/set_home.yaml
+++ b/packs/nest/actions/set_home.yaml
@@ -1,11 +1,11 @@
 ---
-name: set_home
-runner_type: run-python
-description: Set nest to home mode
+name: "set_home"
+runner_type: "run-python"
+description: "Set nest to home mode"
 enabled: true
-entry_point: set_home.py
+entry_point: "set_home.py"
 parameters:
   structure:
-    type: integer
-    description: ID of Nest Home name
+    type: "integer"
+    description: "ID of Nest Home name"
     default: 0
