--- a/packs/nest/actions/show.yaml
+++ b/packs/nest/actions/show.yaml
@@ -1,16 +1,16 @@
 ---
-name: show
-runner_type: run-python
-description: Show current Nest information
+name: "show"
+runner_type: "run-python"
+description: "Show current Nest information"
 enabled: true
-entry_point: show.py
+entry_point: "show.py"
 parameters:
   structure:
-    type: integer
-    description: ID of Nest Home name
+    type: "integer"
+    description: "ID of Nest Home name"
     default: 0
   device:
-    type: integer
-    description: ID of specific Nest device in a structure
+    type: "integer"
+    description: "ID of specific Nest device in a structure"
     default: 0
 
