--- a/packs/nest/actions/set_fan.yaml
+++ b/packs/nest/actions/set_fan.yaml
@@ -1,19 +1,22 @@
 ---
-name: "humidity"
+name: "set_fan"
 runner_type: "run-python"
-description: "Manage humidity"
+description: "Manage fan state"
 enabled: true
-entry_point: "humidity.py"
+entry_point: "set_fan.py"
 parameters:
-  target:
-    type: "integer"
-    description: "Target humidity levels to hit"
+  state:
+    type: "string"
+    description: "State to set the fan"
+    enum:
+      - "on"
+      - "auto"
+    default: "auto"
+    required: true
   structure:
     type: "integer"
     description: "ID of Nest Home name"
-    default: 0
   device:
     type: "integer"
     description: "ID of specific Nest device in a structure"
-    default: 0
 
