--- a/packs/mmonit/actions/get_event.yaml
+++ b/packs/mmonit/actions/get_event.yaml
@@ -7,6 +7,6 @@ entry_point: get_event.py
 parameters:
   event_id:
     type: integer
-    description: ID of the event
+    description: 'ID of the event'
     required: true
     position: 1
