--- a/packs/mmonit/actions/get_status_host.yaml
+++ b/packs/mmonit/actions/get_status_host.yaml
@@ -7,5 +7,5 @@ entry_point: get_status_host.py
 parameters:
   host_id:
     type: integer
-    description: ID of the host
+    description: 'ID of the host'
     required: true
