--- a/packs/mmonit/actions/list_uptime_hosts.yaml
+++ b/packs/mmonit/actions/list_uptime_hosts.yaml
@@ -7,13 +7,13 @@ entry_point: list_uptime_hosts.py
 parameters:
   uptime_range:
     type: integer
-    description: The range id. Possible values: 0=today, 5=week, 6=month, 7=three months, 8=six months, 9=year and 12=custom range. Default is 0=today
+    description: 'The range id. Possible values: 0=today, 5=week, 6=month, 7=three months, 8=six months, 9=year and 12=custom range. Default is 0=today'
     required: false
   datefrom:
     type: integer
-    description: A unix-timestamp (seconds since the epoch, January 1, 1970, 00:00:00 GMT). The timestamp specify the start of a custom uptime range. The range id must also be set to 12, otherwise this argument is ignored.
+    description: 'A unix-timestamp (seconds since the epoch, January 1, 1970, 00:00:00 GMT). The timestamp specify the start of a custom uptime range. The range id must also be set to 12, otherwise this argument is ignored.'
     required: false
   dateto:
     type: integer
-    description: A unix-timestamp, specifying the end of a custom uptime range.
+    description: 'A unix-timestamp, specifying the end of a custom uptime range.'
     required: false
