--- a/packs/mmonit/actions/update_host.yaml
+++ b/packs/mmonit/actions/update_host.yaml
@@ -17,6 +17,9 @@ parameters:
     type: integer
     description: 'Automatic hostname updates flag. Possible values: 0=hostname is automatically updated on change, 1=hostname settings is persistent.'
     required: false
+    enum:
+      - 0
+      - 1
   description:
     type: string
     description: 'The host description'
@@ -25,6 +28,10 @@ parameters:
     type: integer
     description: 'The host status. Possible values: 0=Active, 1=Inactive, 2=Ignored. The "Ignored" state is manually set by user to suppress all events from this host.'
     required: false
+    enum:
+      - 0
+      - 1
+      - 2
   ipaddrout:
     type: string
     description: 'The optional IP-Address which overrides the automatically managed ipaddrin address.'
@@ -35,8 +42,11 @@ parameters:
     required: false
   sslout:
     type: integer
-    description: 'The optional SSL flag which overrides the automatically managed sslin value. Possible values: -1=undefined, 0=disabled, 1=enabled.'
+    description: 'The optional SSL flag which overrides the automatically managed sslin value. Possible values: 0=disabled, 1=enabled.'
     required: false
+    enum:
+      - 0
+      - 1
   monituser:
     type: string
     description: 'The username used when talking to Monit.'
