--- a/packs/azure/pack.yaml
+++ b/packs/azure/pack.yaml
@@ -5,6 +5,10 @@ keywords:
   - microsoft
   - azure
   - cloud
+  - libcloud
+  - servers
+  - virtual machines
+  - azure virtual machines
 version : 0.1
 author : st2-dev
 email : info@stackstorm.com
