--- a/packs/libcloud/actions/upload_file.yaml
+++ b/packs/libcloud/actions/upload_file.yaml
@@ -1,7 +1,7 @@
 ---
 name: upload_file
 runner_type: run-python
-description: Upload a file to the provider container
+description: Upload a file to the provided container
 enabled: true
 entry_point: upload_file.py
 parameters:
