--- a/packs/dripstat/sensors/dripstat_alert_sensor.yaml
+++ b/packs/dripstat/sensors/dripstat_alert_sensor.yaml
@@ -1,5 +1,5 @@
 ---
-  class_name: "dripstat"
+  class_name: "DripstatAlertSensor"
   entry_point: "dripstat_alert_sensor.py"
   description: "Sensor which monitors Dripstat API for active alerts"
   poll_interval: 30
