Adjusting schema for Dripstat Sensor

--- a/packs/dripstat/sensors/dripstat_alert_sensor.yaml
+++ b/packs/dripstat/sensors/dripstat_alert_sensor.yaml
@@ -9,6 +9,6 @@
       description: "Trigger representing an active alert"
       payload_info:
         - "app_name"
-        - "alert_name"
+        - "alert_type"
         - "started_at"
         - "jvm_host"
