Add new W.I.P. approach for handling and formatting ChatOps actions via workflow and custom formatter action.

--- a/packs/st2/aliases/actions_list.yaml
+++ b/packs/st2/aliases/actions_list.yaml
@@ -1,6 +1,6 @@
 ---
 name: "st2-actions-list"
-action_ref: "st2.actions.list"
+action_ref: "st2.chatops.actions.list"
 description: "List available StackStorm actions."
 formats:
   - "pack={{ pack=None }}"
