--- a/packs/st2/actions/actions_list.yaml
+++ b/packs/st2/actions/actions_list.yaml
@@ -2,8 +2,8 @@
 name: "actions.list"
 enabled: true
 description: "Retrieve a list of available StackStorm actions."
-runner_type: run-python
-entry_point: actions_list.py
+runner_type: "run-python"
+entry_point: "actions_list.py"
 parameters:
   pack:
     type: "string"
