Update workflow, only notify for format action.

--- a/packs/st2/actions/chatops_actions_list.yaml
+++ b/packs/st2/actions/chatops_actions_list.yaml
@@ -5,6 +5,9 @@ description: "Retrieve a list of available StackStorm actions and format output 
 runner_type: "action-chain"
 entry_point: "workflows/chatops/actions_list.yaml"
 parameters:
+  skip_notify:
+    default:
+      - "retrieve_actions_list"
   pack:
     type: "string"
     description: "Optional pack to filter on"
