Also include enabled attribute.

--- a/packs/st2/actions/workflows/chatops/actions_list.yaml
+++ b/packs/st2/actions/workflows/chatops/actions_list.yaml
@@ -18,6 +18,7 @@
           - "pack"
           - "name"
           - "description"
+          - "enabled"
       on-failure: "handle_error"
     -
       name: "handle_error"
