--- a/packs/elastic/actions/bloom.yaml
+++ b/packs/elastic/actions/bloom.yaml
@@ -50,6 +50,12 @@ parameters:
   older_than:
     description: Include only indices older than n  time_units.
     type: integer
+  operation_timeout:
+    default: '{{timeout}}'
+    description: Elasticsearch operation timeout in seconds. (It's equal to action
+      timeout).
+    immutable: true
+    type: integer
   port:
     description: Elasticsearch port.
     type: string
@@ -68,7 +74,7 @@ parameters:
     type: string
   timeout:
     default: 600
-    description: Elasticsearch operation timeout in seconds.
+    description: Don't wait for action completion more then the specified timeout.
     type: integer
   timestring:
     description: Python strftime string to match your index definition, e.g. 2015.07.15
