--- a/packs/elastic/actions/optimize.yaml
+++ b/packs/elastic/actions/optimize.yaml
@@ -54,6 +54,12 @@ parameters:
   older_than:
     description: Include only indices older than n  time_units.
     type: integer
+  operation_timeout:
+    default: '{{timeout}}'
+    description: Elasticsearch operation timeout in seconds. (It's equal to action
+      timeout).
+    immutable: true
+    type: integer
   port:
     description: Elasticsearch port.
     type: string
@@ -63,10 +69,6 @@ parameters:
   regex:
     description: Provide your own regex, e.g '^prefix-.*-suffix$'.
     type: string
-  request_timeout:
-    default: 21600
-    description: Allow this many seconds before the transaction times out
-    type: integer
   suffix:
     description: Include only indices ending with suffix.
     type: string
@@ -75,8 +77,8 @@ parameters:
     description: Unit of time to reckon by [hours|days|weeks|months].
     type: string
   timeout:
-    default: 600
-    description: Elasticsearch operation timeout in seconds.
+    default: 21600
+    description: Don't wait for action completion more then the specified timeout.
     type: integer
   timestring:
     description: Python strftime string to match your index definition, e.g. 2015.07.15
