--- a/packs/elastic/actions/snapshot.yaml
+++ b/packs/elastic/actions/snapshot.yaml
@@ -56,6 +56,12 @@ parameters:
   older_than:
     description: Include only indices older than n  time_units.
     type: integer
+  operation_timeout:
+    default: '{{timeout}}'
+    description: Elasticsearch operation timeout in seconds. (It's equal to action
+      timeout).
+    immutable: true
+    type: integer
   partial:
     description: Do not fail if primary shard is unavailable.
     type: boolean
@@ -72,10 +78,6 @@ parameters:
     description: Repository name.
     required: true
     type: string
-  request_timeout:
-    default: 21600
-    description: Allow this many seconds before the transaction times out.
-    type: integer
   snapshot_prefix:
     default: curator-
     description: Override default prefix.
@@ -88,8 +90,8 @@ parameters:
     description: Unit of time to reckon by [hours|days|weeks|months].
     type: string
   timeout:
-    default: 600
-    description: Elasticsearch operation timeout in seconds.
+    default: 21600
+    description: Don't wait for action completion more then the specified timeout.
     type: integer
   timestring:
     description: Python strftime string to match your index definition, e.g. 2015.07.15
