--- a/packs/email/config.yaml
+++ b/packs/email/config.yaml
@@ -1,12 +1,12 @@
 ### Place configuration data for your pack here.
 ---
-imap_server: "imap.gmail.com"
-imap_username: "james@stackstorm.com"
-imap_password: "tqsyqxagumqwrpwc"
-imap_ssl: true
-smtp_server:
-  enable: false
-  port: 25
-  ssl: false
-  ssl_cert: ""
-  ssl_key: ""
+imap_mailboxes:
+  default:
+    server: ""
+    port: 993
+    username: ""
+    password: ""
+    ssl: True
+
+smtp_listen_ip: '127.0.0.1'
+smtp_listen_port: 25
