Use screen_name instead of user
* screen_name is an unambigious property

--- a/packs/twitter/actions/direct_message.yaml
+++ b/packs/twitter/actions/direct_message.yaml
@@ -5,9 +5,9 @@
   enabled: true
   entry_point: "direct_message.py"
   parameters:
-    user:
+    screen_name:
       type: "string"
-      description: "The user to direct message."
+      description: "screen name of the user to direct message."
       required: true
     message:
       type: "string"
