--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,16 @@ os:
 env:
   global:
     - "PIP_DOWNLOAD_CACHE=$HOME/.pip-cache"
+  matrix:
+    - "TASK=flake8"
+    - "TASK=pylint"
+    - "TASK=configs-check"
+    - "TASK=metadata-check"
 cache:
   directories:
     - $HOME/.pip-cache/
-install:
-  - pip install -r requirements-dev.txt
 script:
-  - make all
+  - ./scripts/travis.sh
 notifications:
   email:
     - eng@stackstorm.com
