Allow user to pass limit to all the list actions, decrease default limit for executions list.

--- a/packs/st2/actions/rules_list.yaml
+++ b/packs/st2/actions/rules_list.yaml
@@ -9,3 +9,8 @@ parameters:
     type: "string"
     description: "Optional pack to filter on"
     required: false
+  limit:
+    type: "integer"
+    description: "Maximum number of rules to return"
+    default: 10
+    required: false
