--- a/packs/st2/actions/actions_list.yaml
+++ b/packs/st2/actions/actions_list.yaml
@@ -9,3 +9,8 @@ parameters:
     type: "string"
     description: "Optional pack to filter on"
     required: false
+  limit:
+    type: "integer"
+    description: "Maximum number of actions to return"
+    default: 10
+    required: false
